cluster/apps/security/authentik/app/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: https
  namespace: authentik
  annotations:
    external-dns.alpha.kubernetes.io/target: external.akchristiansen.com
  labels:
    gateway: external
spec:
  parentRefs:
    - name: external-gateway
      sectionName: https
  hostnames: ["auth.akchristiansen.com"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-filter-redirect
  namespace: authentik
  annotations:
    external-dns.alpha.kubernetes.io/target: external.akchristiansen.com
  labels:
    gateway: external
spec:
  parentRefs:
    - name: external-gateway
      sectionName: http
  hostnames: ["auth.akchristiansen.com"]
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
